--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -28,7 +28,7 @@ h1, h2, h3, h4, h5 {
     .container {
     border-radius: 1%;
     border: solid 1px #a87fe9;
-    width: 400px;
+    max-width: 400px;
     padding: 16px;
     background-color: #ffffff9c;
 
